correct the spelling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <p>thi is a new <div class="d-none d-sm-block">
+        <p>this is a new <div class="d-none d-sm-block">
             
         </div></p>
     </div>
