--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <p>this is a new <div class="d-none d-sm-block">
-          <p> git push -u origin main</p> 
+          <p> git push -u origin main(dropdown)</p> 
 
         </div></p>
     </div>
